--- a/index.html
+++ b/index.html
@@ -18,28 +18,37 @@
             <div class="container w-100 where">
                 <a class="navbar-brand logo" href="#"><img src="./img/logo.png" alt=""><span
                         class="brown">后里馬場</span></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"
                     style="padding: 0; border: 0;">
                     <span class="navbar-toggler-icon"></span>
-                </button>
+                </button> -->
 
-                
+                <!-- 測試 -->
+                <div id="toggle" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"
+                style="padding: 0; border: 0;">
+                    <div class="one"></div>
+                    <div class="two"></div>
+                    <div class="three"></div>
+                </div>
 
-                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                        <div class="navbar-nav mx-auto">
+
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav mx-auto">
 
 
 
-                            <!-- <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a> -->
-                            <a class=" brown word nav-item nav-link" href="#" style="padding: 14.26px 8px;">關於馬場</a>
-                            <a class=" brown word nav-item nav-link" href="#" style="padding: 14.26px 8px;">活動體驗</a>
-                            <a class=" brown word nav-item nav-link" href="#" style="padding: 14.26px 8px;">文化歷史</a>
-                            <a class=" brown word nav-item nav-link" href="#" style="padding: 14.26px 8px;">園區資訊</a>
-                            <a class=" brown word nav-item nav-link" href="#" style="padding: 14.26px 8px;">交通指南</a>
-                        </div>
+                        <!-- <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a> -->
+                        <a class=" brown word nav-item nav-link" href="#t1" style="padding: 14.26px 8px;">關於馬場</a>
+                        <a class=" brown word nav-item nav-link" href="#t2" style="padding: 14.26px 8px;">活動體驗</a>
+                        <a class=" brown word nav-item nav-link" href="#t3" style="padding: 14.26px 8px;">文化歷史</a>
+                        <a class=" brown word nav-item nav-link" href="#t4" style="padding: 14.26px 8px;">園區資訊</a>
+                        <a class=" brown word nav-item nav-link" href="#t5" style="padding: 14.26px 8px;">最新消息</a>
+                        <a class=" brown word nav-item nav-link" href="#t6" style="padding: 14.26px 8px;">交通指南</a>
                     </div>
                 </div>
+            </div>
             </div>
         </nav>
 
@@ -65,6 +74,8 @@
             <img src="./img/banner1980-980.png" alt="">
             <div class="base ">后里馬場</div>
         </div>
+
+
 
 
 
@@ -288,7 +299,7 @@
         </section>
 
         <section id="t5">
-            <div class="container pat30">
+            <div class="container pat30 pab50">
                 <!-- 最新消息 -->
                 <div class="col-12 pa0">
                     <div class="title">
@@ -310,7 +321,7 @@
                             <hr>
                             <span>2020台灣燈會在台中，后里馬場為第二大園區</span>
                             <a href="">
-                                <div class="more">更多內容</div>
+                                <div class="more  mh7">更多內容</div>
                             </a>
                         </div>
                     </div>
@@ -318,14 +329,14 @@
                     <div id="t5_img" class="col-lg-4 col-12 mart30 ">
                         <img src="./img/news-1.jpg" alt="">
                         <a href="">
-                            <div class="more">更多內容</div>
+                            <div class="more mh7">更多內容</div>
                     </div></a>
                     <div class="col-lg-7 col-12  mart30 ">
                         <div class="Card_text">
                             2020年02月18日<br>
                             <hr> <span>三月櫻花公園，日本櫻花季開跑</span>
                             <a href="">
-                                <div class="more">更多內容</div>
+                                <div class="more mh7">更多內容</div>
                             </a>
                         </div>
                     </div>
@@ -333,19 +344,26 @@
                     <div id="t5_img" class="col-lg-4 col-12 mart30">
                         <img src="./img/news-3.jpg" alt="">
                         <a href="">
-                            <div class="more">更多內容</div>
+                            <div class="more mh7">更多內容</div>
                     </div></a>
                     <div class="col-lg-7 col-12  mart30">
                         <div class="Card_text">
                             2020年03月03日<br>
                             <hr><span>三豐路於三月份宛如穿梭異國街道，黃花盛大綻放</span>
                             <a href="">
-                                <div class="more">更多內容</div>
+                                <div class="more mh7">更多內容</div>
                             </a>
                         </div>
 
                     </div>
+
+
                 </div>
+
+                <a href="" class="d-flex ">
+                    <div class="more news mh3">更多消息</div>
+                </a>
+
             </div>
 
 
@@ -380,18 +398,21 @@
                     </div>
                 </div>
         </section>
-        <footer>
-            本網站僅為學術用途，如侵權請來電09-12345678
-        </footer>
-
-
-
-
-
-
-
-
     </main>
+    <footer>
+        本網站僅為學術用途，如侵權請來電09-12345678
+    </footer>
+
+    <a href="#">
+        <div class="top "></div>
+    </a>
+
+
+
+
+
+
+
 
     <!-- https://code.jquery.com/jquery/ JQ版本要和Boostrap相同 -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
@@ -414,16 +435,9 @@
     </script>
     <script>
         // 測試
-        $(document).ready(function () {
-            // Transition effect for navbar 
-            $(window).scroll(function () {
-                // checks if window is scrolled more than 300px, adds/removes solid class
-                if ($(this).scrollTop() > 300) {
-                    $('.navbar').addClass('solid-navbar');
-                } else {
-                    $('.navbar').removeClass('solid-navbar');
-                }
-            });
+        $("#toggle").click(function () {
+            $(this).toggleClass("on");
+            $("#menu").slideToggle();
         });
     </script>
 
