--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.1/css/lightbox.min.css">
-    <link rel="stylesheet" href="./CSS/index.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
+    <link rel="stylesheet" href="./CSS/index copy.css">
     <link rel="stylesheet" href="./CSS/layout.css">
 </head>
 
@@ -25,9 +26,9 @@
                 </button> -->
 
                 <!-- 測試 -->
-                <div id="toggle" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"
-                style="padding: 0; border: 0;">
+                <div id="toggle" class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation" style="padding: 0; border: 0;">
                     <div class="one"></div>
                     <div class="two"></div>
                     <div class="three"></div>
@@ -152,29 +153,24 @@
 
             <!-- 測試 -->
             <div class="container-fluid pa0">
-                <div class="row no-gutters">
-                    <div class="col picsize t2-pic1">
-                        <div class="mask">
-                            <h2>馬術競技場</h2>
-                            <p>為競賽場地長達110公尺、寬70公尺，加上完善的週邊設施，是全國規模最大的馬術場地。</p>
+                <div class="swiper-container">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <img src="./img/t2-1xxxxx.jpg" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="./img/t2-2xx.jpg" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="./img/t2-3xx.jpg" alt="">
                         </div>
                     </div>
-                    <div class="col picsize t2-pic2">
-                        <div class="mask">
-                            <h2>射箭 </h2>
-                            <p>專業射箭場，適合親子遊玩。培養專注力、及肢體協調性等多項休閒運動。</p>
-                        </div>
-                    </div>
-                    <div class="col picsize t2-pic3">
-                        <div class="mask">
-                            <h2>騎馬</h2>
-                            <p>除自由騎乘外，也有為初學者和小孩準備的牽乘活動，可以享受騎在馬背上的樂趣。</p>
-                        </div>
-                    </div>
+                    <!-- Add Pagination -->
+                    <div class="swiper-pagination"></div>
                 </div>
             </div>
-
-
+            </div>
+            </div>
 
 
         </section>
@@ -425,6 +421,7 @@
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.1/js/lightbox.min.js">
     </script>
+    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
     <script>
         lightbox.option({
             'resizeDuration': 200,
@@ -439,6 +436,54 @@
             $(this).toggleClass("on");
             $("#menu").slideToggle();
         });
+        window.onload = function () {
+            var win = document.documentElement.clientWidth
+
+
+            if (win < 540) {
+                var slidesPerView_Num = 1
+            }
+            else if (win < 720) {
+                var slidesPerView_Num = 2
+            }
+            else {
+                var slidesPerView_Num = 3
+            }
+            var swiper = new Swiper('.swiper-container', {
+                slidesPerView: slidesPerView_Num,
+                spaceBetween: 0,
+                loop: true,
+                pagination: {
+                    el: '.swiper-pagination',
+                    clickable: true,
+                },
+            });
+        }
+
+        window.onresize = function () {
+            var win = document.documentElement.clientWidth
+
+
+            if (win < 540) {
+                var slidesPerView_Num = 1
+            }
+            else if (win < 720) {
+                var slidesPerView_Num = 2
+            }
+            else {
+                var slidesPerView_Num = 3
+            }
+            var swiper = new Swiper('.swiper-container', {
+                slidesPerView: slidesPerView_Num,
+                spaceBetween: 0,
+                loop: true,
+                pagination: {
+                    el: '.swiper-pagination',
+                    clickable: true,
+                },
+            });
+        }
+
     </script>
 
 
