--- a/index.html
+++ b/index.html
@@ -436,6 +436,8 @@
             $(this).toggleClass("on");
             $("#menu").slideToggle();
         });
+        var slidesPerView_Num = 3
+
         window.onload = function () {
             var win = document.documentElement.clientWidth
 
