--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </button> -->
 
                 <!-- 測試 -->
-                <div id="toggle" class="navbar-toggler" type="button" data-toggle="collapse"
+                <div id="toggle" class="navbar-toggler"  data-toggle="collapse"
                     data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation" style="padding: 0; border: 0;">
                     <div class="one"></div>
@@ -37,9 +37,6 @@
 
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav mx-auto">
-
-
-
                         <!-- <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a> -->
                         <a class=" brown word nav-item nav-link" href="#t1" style="padding: 14.26px 8px;">關於馬場</a>
                         <a class=" brown word nav-item nav-link" href="#t2" style="padding: 14.26px 8px;">活動體驗</a>
