--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
                 <!-- <div class="doing d-flex justify-content-center"> -->
                 <div class="row position-relative">
-                    <img src="./img/map.png" alt="">
+                    <img src="./img/map-1.png" alt="">
                     <a href="./img/t3-1.jpg" data-lightbox="image-1" data-title="馬術競技場">
                         <div class="animate"><img class="here" src="./img/here-12.png" alt=""></div>
                     </a>
