--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
 
 
         <section id="t1">
-            <div class="container pat30">
+            <div class="container pat70">
 
 
                 <!-- 關於馬場 -->
 
-                <div class="col-12 pa0">
-                    <div class="title">
+                <div class="col-12 pa0 ">
+                    <div class="title ">
                         <div class="title_text" role="h1"> 關於馬場
                         </div>
                     </div>
@@ -105,7 +105,7 @@
                 <span>關於馬場</span>
             </div> -->
 
-                <div class="row pat30">
+                <div class="row t1_padd">
 
                     <div class="col-12 col-md-7 ">
                         <img src="./img/t1-oldv1.jpg" alt="">
@@ -117,7 +117,7 @@
                     </div>
                 </div>
 
-                <div class="row pat30 pab50">
+                <div class="row pab50">
                     <div class="col-12 col-md-7 order-0 order-md-1 ">
                         <img src="./img/t1-now v1.jpg" alt="">
                     </div>
@@ -239,7 +239,7 @@
                 </div>
 
 
-                <div class="t1-text text-center">
+                <div class="t1-text text-center mab60">
                     <p>營業時間</p>
                     <p>08:00~17:00</p>
                     <p>04-2515-2588</p>
@@ -254,7 +254,7 @@
                     </div>
                     <div class="row">
                         <div class="col-12 col-lg-6 ">
-                            <div class="t1-text">
+                            <div class="t1-text ">
                                 <div class="t4-t2 text-center rounded-pill">
                                     入場費
                                 </div>
@@ -299,8 +299,8 @@
                                     射箭
                                 </div>
                                 <div class="t4-c2 ">
-                                    <p>10支箭：NT$ 60元</p>
-
+                                    <p>10支箭：NT$ 100元</p>
+                                    <p>20支箭：NT$ 180元</p>
                                 </div>
                             </div>
                         </div>
