--- a/index.html
+++ b/index.html
@@ -109,10 +109,12 @@
                                 <div class="modal-content">
                                     <span class="close">&times;</span>
                                     <div class="hug">
+                                        <h4>
+                                            基本資料
+                                        </h4>
                                         <p>姓名：邱鈺婷</p>
-                                        <p>手機：0928-543905</p>
-                                        <p>電話：(04)25605077</p>
-                                        <p>地址：台中市后里區和興路６０巷５６號</p>
+                                        <p>生日：84年08月12日</p>
+                                        <!-- <p>手機：0928-543905</p> -->
                                         <p>郵件：qwe123750000@gmail.com</p>
                                         <br>
                                         <h4>
@@ -142,10 +144,13 @@
                             <div class="modal-contentp">
                                 <span class="closep">&times;</span>
                                 <div class="hug">
+                                    <h4>
+                                        基本資料
+                                    </h4>
                                     <p>姓名：邱鈺婷</p>
-                                    <p>手機：0928-543905</p>
-                                    <p>電話：(04)25605077</p>
-                                    <p>地址：台中市后里區和興路６０巷５６號</p>
+                                    <p>生日：84年08月12日</p>
+                                    <!-- <p>手機：0928-543905</p> -->
+                                  
                                     <p>郵件：qwe123750000@gmail.com</p>
                                     <br>
                                     <h4>
