--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <section id="aboutme">
 
-            <div id="pallax" class="abme-title ">
+            <div class="abme-title ">
                 <h1>About me</h1>
             </div>
             <div class="pallax"></div>
@@ -409,7 +409,8 @@
             </section> -->
 
         <section id="workexperiece">
-            <div class="title ">work experience</div>
+            <div class="title ">
+               <h1>work experience</h1> </div>
             <div class="wrapper">
                 <div class="card">
                     <input type="checkbox" id="card1" class="more" aria-hidden="true">
@@ -577,8 +578,7 @@
                     <div class="content">
                         <div class="front WEcard5">
                             <div class="inner">
-                                <h2>民眾技藝
-                                    補習班</h2>
+                                <h2>民眾技藝補習班</h2>
                                 <div class="rating">
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
@@ -618,11 +618,11 @@
         </section>
 
         <section id="professionalskill">
-            <div class="title ">professional skill</div>
-            <h1>
+            <div class="title "> <h1>professional skill</h1> </div>
+            <!-- <h1>
                 Be bold, make your choice.<br><br>
-                <!-- 一切的選擇都在於你 -->
-            </h1>
+                一切的選擇都在於你
+            </h1> -->
 
             <div class="tabs">
                 <div class="tab-2">
